--- a/index.html
+++ b/index.html
@@ -5368,6 +5368,408 @@
 </script>
 
 
+  <!-- ===== FOOTER SECTION ===== -->
+<style>
+/* Footer 样式 */
+.footer-section {
+  padding: 20px 0 20px;  /* 减少底部padding,与浏览器下方距离更近 */
+  background: #0D0D0D;
+}
+
+.footer-container {
+  position: relative;
+  max-width: 1520px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+/* 上方大框 */
+.footer-main-box {
+  position: relative;
+  background-color: rgba(20, 20, 20, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  padding: 110px 60px;
+  margin-top: 40px;      /* 整体下移 */
+  margin-bottom: 20px;
+  overflow: hidden;
+  width: 100%;           /* 宽度：可调整（100% 表示容器宽度）*/
+  height: 475px;          /* 高度：可调整（auto 或具体数值如 600px）*/
+  min-height: 400px;     /* 最小高度：可调整 */
+}
+
+.footer-main-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -20px;
+  background-image: url('sections/footer/background.png');
+  background-size: 100% calc(100% + var(--footer-bottom-height) + 20px);
+  background-position: top left;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.footer-main {
+  position: relative;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;  /* 左侧占2份，右侧4列各占1份 */
+  gap: 90px;
+}
+
+/* 左侧品牌区域 */
+.footer-brand {
+  grid-column: span 1;   /* 只占1列，但这1列宽度是2fr */
+}
+
+.footer-logo-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0px;
+  margin-bottom: -10px;    /* 减少 logo 和描述文字的间距 */
+  margin-top: -145px;    /* 与 logo 的 margin-top 保持一致 */
+  margin-left: -43px;    /* 与 logo 的 margin-left 保持一致 */
+}
+
+.footer-logo {
+  width: 220px;
+  height: auto;
+  margin-top: 0px;       /* logo 本身不需要边距，由 wrapper 控制 */
+  margin-left: 0px;      /* logo 本身不需要边距，由 wrapper 控制 */
+}
+
+.footer-brand-name {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFFFFF;
+  line-height: 1.2;
+}
+
+.footer-brand-subtitle {
+  font-size: 20px;   
+  font-weight: 600;
+  color: #FFFFFF;      
+  line-height: 1.2;   
+  margin-top: -4px;
+}
+
+.footer-description {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #FFFFFF;        /* 改为白色字体 */
+  margin-bottom: 30px;
+  max-width: 800px;      /* 大幅增加容器宽度，减少换行 */
+  margin-left: 0px;      /* 与 logo 左对齐 */
+}
+
+.footer-cta-button {
+  display: inline-block;
+  padding: 12px 30px;    /* 增加左右内边距，让按钮变宽 */
+  background: #2A2A2A;   /* 暗灰色背景 */
+  color: #FFFFFF;
+  text-decoration: none;
+  border-radius: 5px;    /* 调整按钮圆角 */
+  font-size: 14px;
+  font-weight: 500;
+  border: 1px solid rgba(255, 255, 255, 0.2);  /* 边框 */
+  transition: all 0.3s ease;
+  margin-left: 0px;
+}
+
+.footer-cta-button:hover {
+  background: #3A3A3A;   /* hover 时稍亮的暗灰色 */
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+/* 链接列 */
+.footer-links-column {
+  display: flex;
+  flex-direction: column;
+  margin-right: -50px;   /* 右移：负值向右移动 */
+  margin-top: -60px;    /* 与 logo 上边距保持一致 */
+}
+
+.footer-column-title {
+  font-size: 16px;       /* 增加主分类标题文字大小 */
+  font-weight: 600;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  letter-spacing: 0.5px;
+}
+
+.footer-links-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;             /* 增加小分类项之间的间距 */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-link {
+  color: #999999;
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.3s ease;
+}
+
+.footer-link:hover {
+  color: #FFFFFF;
+}
+
+/* 下方小框（版权区域）*/
+.footer-bottom-box {
+  position: relative;
+  background-color: rgba(20, 20, 20, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  padding: 23px 60px;
+  overflow: hidden;
+  width: 100%;         
+  height: auto;         
+  min-height: 70px;      /* 最小高度：可调整 */
+}
+
+.footer-bottom-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('sections/footer/background.png');
+  background-size: 100% calc(var(--footer-main-height) + 100% + 20px);
+  background-position-x: left;
+  background-position-y: calc(-1 * (var(--footer-main-height) + 20px));
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.footer-bottom {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-copyright {
+  font-size: 14px;
+  color: #FFFFFF;        /* 改为白色 */
+}
+
+.footer-legal-links {
+  display: flex;
+  gap: 0;                /* 移除 gap，使用分隔符间距 */
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-legal-links li {
+  display: flex;
+  align-items: center;
+}
+
+.footer-legal-links li:not(:last-child)::after {
+  content: '|';
+  color: #FFFFFF;
+  margin: 0 15px;        /* 分隔符左右间距 */
+}
+
+.footer-legal-link {
+  color: #FFFFFF;        /* 改为白色 */
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.3s ease;
+}
+
+.footer-legal-link:hover {
+  color: #FFFFFF;
+}
+
+/* 响应式设计 */
+@media (max-width: 991px) {
+  .footer-main {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
+  }
+
+  .footer-brand {
+    grid-column: span 3;
+  }
+
+  .footer-main-box {
+    padding: 40px 30px;
+  }
+
+  .footer-bottom-box {
+    padding: 20px 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer-section {
+    padding: 40px 0 0;
+  }
+
+  .footer-container {
+    padding: 0 20px;
+  }
+
+  .footer-main {
+    grid-template-columns: 1fr;
+    gap: 40px;
+  }
+
+  .footer-brand {
+    grid-column: span 1;
+  }
+
+  .footer-description {
+    max-width: 100%;
+  }
+
+  .footer-main-box {
+    padding: 30px 20px;
+    margin-bottom: 15px;
+  }
+
+  .footer-bottom-box {
+    padding: 20px;
+    margin-bottom: 40px;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+  }
+
+  .footer-legal-links {
+    gap: 20px;
+  }
+}
+</style>
+
+<footer class="footer-section">
+  <div class="footer-container">
+    <!-- 上方大框：主要内容区域 -->
+    <div class="footer-main-box">
+      <div class="footer-main">
+      <!-- 品牌区域 -->
+      <div class="footer-brand">
+        <div class="footer-logo-wrapper">
+          <img src="sections/footer/logo.png" alt="TreClip Studio Logo" class="footer-logo">
+          <div>
+            <div class="footer-brand-name">Treclipse</div>
+            <div class="footer-brand-subtitle">Studio</div>
+          </div>
+        </div>
+        <p class="footer-description">
+          Premium AI for branded short-<br>form: content generation, editing,<br> AI avatars, and product shots — <br>crafted to your visual identity.
+        </p>
+        <a href="#contact" class="footer-cta-button">Contact us</a>
+      </div>
+
+      <!-- EXPLORE 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">EXPLORE</h3>
+        <ul class="footer-links-list">
+          <li><a href="#explore" class="footer-link">Explore</a></li>
+          <li><a href="#about" class="footer-link">About</a></li>
+          <li><a href="#contact" class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- FEATURES 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">FEATURES</h3>
+        <ul class="footer-links-list">
+          <li><a href="#create" class="footer-link">Create</a></li>
+          <li><a href="#edit" class="footer-link">Edit</a></li>
+          <li><a href="#avatar" class="footer-link">Avatar</a></li>
+        </ul>
+      </div>
+
+      <!-- SOLUTIONS 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">SOLUTIONS</h3>
+        <ul class="footer-links-list">
+          <li><a href="#brand-marketing" class="footer-link">Brand Marketing</a></li>
+          <li><a href="#storytelling" class="footer-link">Storytelling</a></li>
+          <li><a href="#sales" class="footer-link">Sales & Advertisment</a></li>
+          <li><a href="#media" class="footer-link">Media</a></li>
+        </ul>
+      </div>
+
+      <!-- AI SUITE 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">AI SUITE</h3>
+        <ul class="footer-links-list">
+          <li><a href="#content-generator" class="footer-link">Content generator</a></li>
+          <li><a href="#ai-avatar" class="footer-link">AI avatar.</a></li>
+          <li><a href="#product-shots" class="footer-link">Product shots</a></li>
+          <li><a href="#clipmaker" class="footer-link">Clipmaker</a></li>
+        </ul>
+      </div>
+      </div>
+    </div>
+
+    <!-- 下方小框：版权区域 -->
+    <div class="footer-bottom-box">
+      <div class="footer-bottom">
+      <p class="footer-copyright">© TreClip Studio. All rights reserved.</p>
+      <ul class="footer-legal-links">
+        <li><a href="#privacy" class="footer-legal-link">Privacy</a></li>
+        <li><a href="#terms" class="footer-legal-link">Terms</a></li>
+      </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<script>
+(function() {
+  'use strict';
+
+  // 设置 footer 背景图的尺寸，确保两个框拼接成完整图片
+  function setFooterBackgroundSize() {
+    const mainBox = document.querySelector('.footer-main-box');
+    const bottomBox = document.querySelector('.footer-bottom-box');
+
+    if (mainBox && bottomBox) {
+      const mainHeight = mainBox.offsetHeight;
+      const bottomHeight = bottomBox.offsetHeight;
+
+      // 设置 CSS 变量
+      document.documentElement.style.setProperty('--footer-main-height', mainHeight + 'px');
+      document.documentElement.style.setProperty('--footer-bottom-height', bottomHeight + 'px');
+    }
+  }
+
+  // 页面加载时设置
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', setFooterBackgroundSize);
+  } else {
+    setFooterBackgroundSize();
+  }
+
+  // 窗口大小改变时重新计算
+  let resizeTimer;
+  window.addEventListener('resize', function() {
+    clearTimeout(resizeTimer);
+    resizeTimer = setTimeout(setFooterBackgroundSize, 100);
+  });
+})();
+</script>
+
+
   <!-- ===== GLOBAL SCRIPTS ===== -->
   <!-- Global Scripts -->
   <script src="js/webflow.js"></script>
