--- a/sections/footer/footer.html
+++ b/sections/footer/footer.html
@@ -1,236 +1,399 @@
-<!-- ===== Footer Module ===== -->
 <style>
-/* Footer Styles */
-.footer {
-  padding: var(--spacing-3xl) 0 var(--spacing-lg);
-  background: var(--color-bg);
-  border-top: 1px solid var(--color-border);
+/* Footer 样式 */
+.footer-section {
+  padding: 20px 0 20px;  /* 减少底部padding,与浏览器下方距离更近 */
+  background: #0D0D0D;
 }
 
-.footer-grid {
-  max-width: var(--container-width);
+.footer-container {
+  position: relative;
+  max-width: 1520px;
   margin: 0 auto;
-  padding: 0 var(--spacing-lg);
+  padding: 0 40px;
+}
+
+/* 上方大框 */
+.footer-main-box {
+  position: relative;
+  background-color: rgba(20, 20, 20, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  padding: 110px 60px;
+  margin-top: 40px;      /* 整体下移 */
+  margin-bottom: 20px;
+  overflow: hidden;
+  width: 100%;           /* 宽度：可调整（100% 表示容器宽度）*/
+  height: 475px;          /* 高度：可调整（auto 或具体数值如 600px）*/
+  min-height: 400px;     /* 最小高度：可调整 */
+}
+
+.footer-main-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -20px;
+  background-image: url('sections/footer/background.png');
+  background-size: 100% calc(100% + var(--footer-bottom-height) + 20px);
+  background-position: top left;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  z-index: 0;
+}
+
+.footer-main {
+  position: relative;
+  z-index: 1;
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
-  gap: var(--spacing-xl);
-  margin-bottom: var(--spacing-2xl);
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;  /* 左侧占2份，右侧4列各占1份 */
+  gap: 90px;
 }
 
-.footer-brand .footer-logo {
-  height: 32px;
-  margin-bottom: var(--spacing-md);
+/* 左侧品牌区域 */
+.footer-brand {
+  grid-column: span 1;   /* 只占1列，但这1列宽度是2fr */
 }
 
-.footer-tagline {
-  color: var(--color-text-secondary);
-  font-size: 14px;
-  line-height: 1.6;
-  margin-bottom: var(--spacing-md);
-  max-width: 300px;
-}
-
-.footer-social {
-  display: flex;
-  gap: var(--spacing-sm);
-}
-
-.footer-social a {
-  width: 40px;
-  height: 40px;
+.footer-logo-wrapper {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 8px;
-  color: var(--color-text-secondary);
-  transition: all var(--transition);
-  font-size: 18px;
+  gap: 0px;
+  margin-bottom: -10px;    /* 减少 logo 和描述文字的间距 */
+  margin-top: -145px;    /* 与 logo 的 margin-top 保持一致 */
+  margin-left: -43px;    /* 与 logo 的 margin-left 保持一致 */
 }
 
-.footer-social a:hover {
-  background: rgba(255, 255, 255, 0.1);
-  color: var(--color-text);
-  transform: translateY(-2px);
+.footer-logo {
+  width: 220px;
+  height: auto;
+  margin-top: 0px;       /* logo 本身不需要边距，由 wrapper 控制 */
+  margin-left: 0px;      /* logo 本身不需要边距，由 wrapper 控制 */
 }
 
-.footer-column {
+.footer-brand-name {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFFFFF;
+  line-height: 1.2;
+}
+
+.footer-brand-subtitle {
+  font-size: 20px;   
+  font-weight: 600;
+  color: #FFFFFF;      
+  line-height: 1.2;   
+  margin-top: -4px;
+}
+
+.footer-description {
+  font-size: 14px;
+  line-height: 1.2;
+  color: #FFFFFF;        /* 改为白色字体 */
+  margin-bottom: 30px;
+  max-width: 800px;      /* 大幅增加容器宽度，减少换行 */
+  margin-left: 0px;      /* 与 logo 左对齐 */
+}
+
+.footer-cta-button {
+  display: inline-block;
+  padding: 12px 30px;    /* 增加左右内边距，让按钮变宽 */
+  background: #2A2A2A;   /* 暗灰色背景 */
+  color: #FFFFFF;
+  text-decoration: none;
+  border-radius: 5px;    /* 调整按钮圆角 */
+  font-size: 14px;
+  font-weight: 500;
+  border: 1px solid rgba(255, 255, 255, 0.2);  /* 边框 */
+  transition: all 0.3s ease;
+  margin-left: 0px;
+}
+
+.footer-cta-button:hover {
+  background: #3A3A3A;   /* hover 时稍亮的暗灰色 */
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+/* 链接列 */
+.footer-links-column {
   display: flex;
   flex-direction: column;
+  margin-right: -50px;   /* 右移：负值向右移动 */
+  margin-top: -60px;    /* 与 logo 上边距保持一致 */
 }
 
-.footer-title {
-  font-size: 14px;
+.footer-column-title {
+  font-size: 16px;       /* 增加主分类标题文字大小 */
   font-weight: 600;
-  margin-bottom: var(--spacing-md);
-  color: var(--color-text);
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  letter-spacing: 0.5px;
 }
 
-.footer-links {
+.footer-links-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;             /* 增加小分类项之间的间距 */
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.footer-links li {
-  margin-bottom: 0.75rem;
-}
-
-.footer-links a {
-  color: var(--color-text-secondary);
+.footer-link {
+  color: #999999;
+  text-decoration: none;
   font-size: 14px;
-  transition: color var(--transition);
+  transition: color 0.3s ease;
 }
 
-.footer-links a:hover {
-  color: var(--color-text);
+.footer-link:hover {
+  color: #FFFFFF;
+}
+
+/* 下方小框（版权区域）*/
+.footer-bottom-box {
+  position: relative;
+  background-color: rgba(20, 20, 20, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  padding: 23px 60px;
+  overflow: hidden;
+  width: 100%;         
+  height: auto;         
+  min-height: 70px;      /* 最小高度：可调整 */
+}
+
+.footer-bottom-box::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('sections/footer/background.png');
+  background-size: 100% calc(var(--footer-main-height) + 100% + 20px);
+  background-position-x: left;
+  background-position-y: calc(-1 * (var(--footer-main-height) + 20px));
+  background-repeat: no-repeat;
+  opacity: 0.5;
+  z-index: 0;
 }
 
 .footer-bottom {
-  max-width: var(--container-width);
-  margin: 0 auto;
-  padding: 0 var(--spacing-lg);
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: var(--spacing-lg);
-  border-top: 1px solid var(--color-border);
 }
 
 .footer-copyright {
-  color: var(--color-text-muted);
   font-size: 14px;
+  color: #FFFFFF;        /* 改为白色 */
 }
 
-.footer-bottom-links {
+.footer-legal-links {
   display: flex;
-  gap: var(--spacing-lg);
+  gap: 0;                /* 移除 gap，使用分隔符间距 */
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.footer-bottom-links a {
-  color: var(--color-text-muted);
+.footer-legal-links li {
+  display: flex;
+  align-items: center;
+}
+
+.footer-legal-links li:not(:last-child)::after {
+  content: '|';
+  color: #FFFFFF;
+  margin: 0 15px;        /* 分隔符左右间距 */
+}
+
+.footer-legal-link {
+  color: #FFFFFF;        /* 改为白色 */
+  text-decoration: none;
   font-size: 14px;
-  transition: color var(--transition);
+  transition: color 0.3s ease;
 }
 
-.footer-bottom-links a:hover {
-  color: var(--color-text-secondary);
+.footer-legal-link:hover {
+  color: #FFFFFF;
 }
 
-/* Responsive */
+/* 响应式设计 */
 @media (max-width: 991px) {
-  .footer-grid {
-    grid-template-columns: repeat(2, 1fr);
+  .footer-main {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
   }
 
   .footer-brand {
-    grid-column: 1 / -1;
+    grid-column: span 3;
+  }
+
+  .footer-main-box {
+    padding: 40px 30px;
+  }
+
+  .footer-bottom-box {
+    padding: 20px 30px;
   }
 }
 
 @media (max-width: 767px) {
-  .footer-grid {
+  .footer-section {
+    padding: 40px 0 0;
+  }
+
+  .footer-container {
+    padding: 0 20px;
+  }
+
+  .footer-main {
     grid-template-columns: 1fr;
+    gap: 40px;
+  }
+
+  .footer-brand {
+    grid-column: span 1;
+  }
+
+  .footer-description {
+    max-width: 100%;
+  }
+
+  .footer-main-box {
+    padding: 30px 20px;
+    margin-bottom: 15px;
+  }
+
+  .footer-bottom-box {
+    padding: 20px;
+    margin-bottom: 40px;
   }
 
   .footer-bottom {
     flex-direction: column;
-    gap: var(--spacing-md);
+    gap: 20px;
     text-align: center;
   }
 
-  .footer-bottom-links {
-    flex-direction: column;
-    gap: var(--spacing-sm);
+  .footer-legal-links {
+    gap: 20px;
   }
 }
 </style>
 
-<footer class="footer">
-  <div class="footer-grid">
-    <div class="footer-brand">
-      <img src="sections/footer/logo.jpg" alt="TreClip" class="footer-logo">
-      <p class="footer-tagline">
-        AI-powered video creation platform for creators who want to make stunning content effortlessly.
-      </p>
-      <div class="footer-social">
-        <a href="#" aria-label="Twitter">
-          <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-          </svg>
-        </a>
-        <a href="#" aria-label="GitHub">
-          <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0020 4.77 5.07 5.07 0 0019.91 1S18.73.65 16 2.48a13.38 13.38 0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 005 4.77a5.44 5.44 0 00-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 009 18.13V22"></path>
-          </svg>
-        </a>
-        <a href="#" aria-label="LinkedIn">
-          <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-            <circle cx="4" cy="4" r="2"></circle>
-          </svg>
-        </a>
-        <a href="#" aria-label="Discord">
-          <svg width="20" height="20" fill="currentColor" viewBox="0 0 24 24">
-            <path d="M20.317 4.37a19.791 19.791 0 00-4.885-1.515.074.074 0 00-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 00-5.487 0 12.64 12.64 0 00-.617-1.25.077.077 0 00-.079-.037A19.736 19.736 0 003.677 4.37a.07.07 0 00-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 00.031.057 19.9 19.9 0 005.993 3.03.078.078 0 00.084-.028c.462-.63.874-1.295 1.226-1.994a.076.076 0 00-.041-.106 13.107 13.107 0 01-1.872-.892.077.077 0 01-.008-.128 10.2 10.2 0 00.372-.292.074.074 0 01.077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 01.078.01c.12.098.246.198.373.292a.077.077 0 01-.006.127 12.299 12.299 0 01-1.873.892.077.077 0 00-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 00.084.028 19.839 19.839 0 006.002-3.03.077.077 0 00.032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 00-.031-.03z"></path>
-          </svg>
-        </a>
+<footer class="footer-section">
+  <div class="footer-container">
+    <!-- 上方大框：主要内容区域 -->
+    <div class="footer-main-box">
+      <div class="footer-main">
+      <!-- 品牌区域 -->
+      <div class="footer-brand">
+        <div class="footer-logo-wrapper">
+          <img src="sections/footer/logo.png" alt="TreClip Studio Logo" class="footer-logo">
+          <div>
+            <div class="footer-brand-name">Treclipse</div>
+            <div class="footer-brand-subtitle">Studio</div>
+          </div>
+        </div>
+        <p class="footer-description">
+          Premium AI for branded short-<br>form: content generation, editing,<br> AI avatars, and product shots — <br>crafted to your visual identity.
+        </p>
+        <a href="#contact" class="footer-cta-button">Contact us</a>
+      </div>
+
+      <!-- EXPLORE 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">EXPLORE</h3>
+        <ul class="footer-links-list">
+          <li><a href="#explore" class="footer-link">Explore</a></li>
+          <li><a href="#about" class="footer-link">About</a></li>
+          <li><a href="#contact" class="footer-link">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- FEATURES 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">FEATURES</h3>
+        <ul class="footer-links-list">
+          <li><a href="#create" class="footer-link">Create</a></li>
+          <li><a href="#edit" class="footer-link">Edit</a></li>
+          <li><a href="#avatar" class="footer-link">Avatar</a></li>
+        </ul>
+      </div>
+
+      <!-- SOLUTIONS 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">SOLUTIONS</h3>
+        <ul class="footer-links-list">
+          <li><a href="#brand-marketing" class="footer-link">Brand Marketing</a></li>
+          <li><a href="#storytelling" class="footer-link">Storytelling</a></li>
+          <li><a href="#sales" class="footer-link">Sales & Advertisment</a></li>
+          <li><a href="#media" class="footer-link">Media</a></li>
+        </ul>
+      </div>
+
+      <!-- AI SUITE 列 -->
+      <div class="footer-links-column">
+        <h3 class="footer-column-title">AI SUITE</h3>
+        <ul class="footer-links-list">
+          <li><a href="#content-generator" class="footer-link">Content generator</a></li>
+          <li><a href="#ai-avatar" class="footer-link">AI avatar.</a></li>
+          <li><a href="#product-shots" class="footer-link">Product shots</a></li>
+          <li><a href="#clipmaker" class="footer-link">Clipmaker</a></li>
+        </ul>
+      </div>
       </div>
     </div>
 
-    <div class="footer-column">
-      <h4 class="footer-title">Product</h4>
-      <ul class="footer-links">
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">AI Studio</a></li>
-        <li><a href="#">Templates</a></li>
-        <li><a href="#">Updates</a></li>
+    <!-- 下方小框：版权区域 -->
+    <div class="footer-bottom-box">
+      <div class="footer-bottom">
+      <p class="footer-copyright">© TreClip Studio. All rights reserved.</p>
+      <ul class="footer-legal-links">
+        <li><a href="#privacy" class="footer-legal-link">Privacy</a></li>
+        <li><a href="#terms" class="footer-legal-link">Terms</a></li>
       </ul>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Resources</h4>
-      <ul class="footer-links">
-        <li><a href="#">Documentation</a></li>
-        <li><a href="#">Tutorials</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Community</a></li>
-        <li><a href="#">Support</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Company</h4>
-      <ul class="footer-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Press</a></li>
-        <li><a href="#">Partners</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <h4 class="footer-title">Legal</h4>
-      <ul class="footer-links">
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Terms of Service</a></li>
-        <li><a href="#">Cookie Policy</a></li>
-        <li><a href="#">GDPR</a></li>
-        <li><a href="#">Licenses</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <div class="footer-copyright">
-      &copy; 2025 TreClip. All rights reserved.
-    </div>
-    <div class="footer-bottom-links">
-      <a href="#">Privacy</a>
-      <a href="#">Terms</a>
-      <a href="#">Cookies</a>
+      </div>
     </div>
   </div>
 </footer>
+
+<script>
+(function() {
+  'use strict';
+
+  // 设置 footer 背景图的尺寸，确保两个框拼接成完整图片
+  function setFooterBackgroundSize() {
+    const mainBox = document.querySelector('.footer-main-box');
+    const bottomBox = document.querySelector('.footer-bottom-box');
+
+    if (mainBox && bottomBox) {
+      const mainHeight = mainBox.offsetHeight;
+      const bottomHeight = bottomBox.offsetHeight;
+
+      // 设置 CSS 变量
+      document.documentElement.style.setProperty('--footer-main-height', mainHeight + 'px');
+      document.documentElement.style.setProperty('--footer-bottom-height', bottomHeight + 'px');
+    }
+  }
+
+  // 页面加载时设置
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', setFooterBackgroundSize);
+  } else {
+    setFooterBackgroundSize();
+  }
+
+  // 窗口大小改变时重新计算
+  let resizeTimer;
+  window.addEventListener('resize', function() {
+    clearTimeout(resizeTimer);
+    resizeTimer = setTimeout(setFooterBackgroundSize, 100);
+  });
+})();
+</script>
